--- a/index.html
+++ b/index.html
@@ -4,11 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Tic-Tac-Toe-Game</title>
   </head>
   <body>
     <header>
-      <h1>Tic-Tac-Toe-Game</h1>
+      <h1>Welcome to Tic Tac Game</h1>
     </header>
+
+    <div class="gameContainer">
+      <div class="container">
+        <div class="box"><span class="boxtext"></span></div>
+        <div class="box"><span class="boxtext"></span></div>
+        <div class="box"><span class="boxtext"></span></div>
+        <div class="box"><span class="boxtext"></span></div>
+        <div class="box"><span class="boxtext"></span></div>
+        <div class="box"><span class="boxtext"></span></div>
+        <div class="box"><span class="boxtext"></span></div>
+        <div class="box"><span class="boxtext"></span></div>
+        <div class="box"><span class="boxtext"></span></div>
+      </div>
+    </div>
+
+    <div class="gameInfo">
+      <span class="info">Turn for X</span>
+      <button id="reset">Reset</button>
+    </div>
+
+    <h3 class="ans"></h3>
   </body>
 </html>
+
+<script src="./index.js"></script>
